# qianxin_cpp

./: .gitignore  引用资料
第三集/: 第三集-RAII与资源安全.md
第二集/: 第二集-零成本抽象.md
第四集/: 第四集-模板元编程与constexpr.md
第四集/samples/: 01_template_vs_constexpr.cpp  02_if_constexpr.cpp  03_compile_time_lookup_table  03_compile_time_lookup_table.cpp  04_sfinae_example  04_sfinae_example.cpp  05_constexpr_vs_consteval.cpp  06_compile_time_string_format.cpp  CMakeLists.txt  README.md
